sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:2: error: not found: value getBaseAmount
  for (i <- 0 to getBaseAmount() - 1) {
                 ^SelectBaseball:19: error: type mismatch;
 found   : Int
 required: Boolean
      if (getPlayerColor(i, 0)) return (i, 0);
                        ^SelectBaseball:20: error: type mismatch;
 found   : Int
 required: Boolean
      if (getPlayerColor(i, 1)) return (i, 1);
                        ^SelectBaseball:17: error: type mismatch;
 found   : Unit
 required: (Integer, Integer)
  for (i <- 0 to getBasesAmount() - 1) {
         ^